--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,6 +1,3 @@
-<footer class="footer">
-  <div class="container">
-    {{ partial "footer_links.html" . }}
-    {{ partial "copyright.html" . }}
-  </div>
+<footer class="footer grid">
+  {{ partial "footer_links.html" . }}
 </footer>
