--- a/layouts/partials/footer_links.html
+++ b/layouts/partials/footer_links.html
@@ -1,3 +1,4 @@
+<div class="col col-1">
 <ul class="links">
   <li>
     <a href="https://github.com/taravancil/" class="footer__link">
@@ -9,19 +10,5 @@
       twitter
     </a>
   </li>
-  <li>
-    <a href="https://instagram.com/taravancil/" class="footer__link">
-      instagram
-    </a>
-  </li>
-  <li>
-    <a href="https://taravancil.com/food/" class="footer__link">
-      my food journal
-    </a>
-  </li>
-  <li>
-    <a href="https://github.com/taravancil" class="footer__link footer__link--last">
-      RSS
-    </a>
-  </li>
-</ul>
+  </ul>
+</div>
