--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,5 +1,5 @@
 <header class="header">
-  <div class="container">
-    {{ partial "navigation.html" . }}
-  </div>
+  <a class="name" href="/">Tara Vancil</a>
+  <p class="tagline">Programmer. Currently
+  at the Recurse Center in New York City.</p>
 </header>
