--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -1,6 +1,6 @@
 body {
-  font-family: Lora, Georgia, serif;
-  line-height: 1.6;
-  color: $color-text;
+  font-family: Georgia, serif;
+  font-size: .93em;
+  line-height: 1.5;
   text-rendering: optimizeLegibility;
 }
