--- a/src/scss/components/_footnotes.scss
+++ b/src/scss/components/_footnotes.scss
@@ -1,4 +1,4 @@
 .footnotes {
   font-size: .8em;
-  border-top: 1px dotted transparentize($color-text, .5);
+  border-top: 1px dotted transparentize(black, .5);
 }
