--- a/src/scss/layout/_grid.scss
+++ b/src/scss/layout/_grid.scss
@@ -1,13 +1,20 @@
+%col {
+  min-width: 80px;
+  max-width: 150px;
+}
+
 .grid {
-  @extend %flex-container;
-  flex-wrap: wrap;
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
 }
 
-.col-1-3 {
-  flex-basis: 33.3%;
+%col-1 {
+    @extend %col;
+    flex-basis: 20%;
 }
 
-.col-2-3 {
-  flex-basis: 66.6%;
-  min-width: 600px;
+%col-2 {
+    @extend %col;
+    flex-basis: 40%;
 }
