--- a/src/scss/layout/all.scss
+++ b/src/scss/layout/all.scss
@@ -1,6 +1,5 @@
 @import 'containers';
+@import 'grid';
 @import 'header';
-@import 'navigation';
-@import 'intro';
 @import 'main';
 @import 'footer';
