--- a/src/scss/themes/_theme.scss
+++ b/src/scss/themes/_theme.scss
@@ -1,51 +1,56 @@
+body {
+    border-top: 5px solid blue;
+}
+
 dl {
-  @extend %module;
+    @extend %module;
 }
 
 dt {
-  font-weight: bold;
+    font-weight: bold;
 
-  &:after {
-    content: ':';
-  }
+    &:after {
+        content: ':';
+    }
 }
 
 dd {
-  margin-bottom: 1em;
+    margin-bottom: 1em;
 }
 
 h1, h2, h3, h4, h5, h6 {
-  margin: .5em 0;
+    margin: .5em 0;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-weight: normal;
 }
 
 h1 {
-  font-size: 2em;
-  margin-bottom: 1em;
+    font-size: 1.65em;
 }
 
 h2 {
-  font-size: 1.5em;
-  color: $color-text--header--accent;
+    font-size: 1.5em;
 }
 
 h3 {
-  font-size: 1.3em;
-  color: $color-text--header--accent;
+    font-size: 1.3em;
 }
 
 h4 {
-  font-size: 1.2em;
-  border-bottom: 1px dotted transparentize($color-text, .5);
+    font-size: 1.2em;
+    border-bottom: 1px dotted;
 }
 
 h6 {
-  text-transform: uppercase;
+    text-transform: uppercase;
 }
 
 h5 {
-  text-decoration: underline;
+    text-decoration: underline;
 }
 
 h5, h6 {
-  font-size: 1.1em;
+    font-size: 1.1em;
 }
