--- a/src/scss/utils/_placeholders.scss
+++ b/src/scss/utils/_placeholders.scss
@@ -12,7 +12,7 @@
 }
 
 %link {
-  color: $color-text--link;
+    color: blue;
 
   &:hover {
     text-decoration: underline;
@@ -36,44 +36,5 @@
 %module {
   padding: 1.75em;
   border-radius: 2px;
-  border: 1px solid transparentize($color-text, .7);
-  background: transparentize($color-text, .82);
-}
-
-%striped {
-  background-image: url('/images/stripe.svg');
-}
-
-%dotted {
-  display: relative;
-
-  &::after {
-    content: '';
-    display: block;
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    background-image: url('/images/dot.svg');
-  }
-}
-
-%col {
-  flex-grow: 1;
-  min-width: 250px;
-}
-
-%col-1-2 {
-  @extend %col;
-  flex-basis: 50%;
-}
-
-%col-1-4 {
-  @extend %col;
-  flex-basis: 25%;
-}
- 
-%col-3-4 {
-  @extend %col;
-  flex-basis: 75%;
+  border: 1px solid gray;
 }
