fix twitter link

--- a/layouts/partials/footer_links.html
+++ b/layouts/partials/footer_links.html
@@ -6,7 +6,7 @@
     </a>
   </li>
   <li>
-    <a href="https://twitter.com/tbvancil/" class="footer__link">
+    <a href="https://twitter.com/taravancil/" class="footer__link">
       twitter
     </a>
   </li>
