--- a/src/scss/themes/_code.scss
+++ b/src/scss/themes/_code.scss
@@ -10,8 +10,7 @@ pre {
 }
 
 code {
-    border-radius: 1px;
-    background: mix(lime, white, 12%);
+    background: mix(gray, white, 12%);
     padding: .1em .2em;
     font-size: 1em;
 }
