force browser to use new favicon

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -7,4 +7,5 @@
   </title>
   <link rel="canonical" href="{{ .Permalink }}" />
   <link rel="stylesheet" href="/css/style.min.css" />
+  <link rel="icon" href="https://taravancil.com/favicon2.ico">
 </head>
