fix tags layout on single post layout

--- a/layouts/blog/single.html
+++ b/layouts/blog/single.html
@@ -23,7 +23,7 @@
 
           <div class="post__content">
             {{ .Content }}
-            {{ partial "tags.html" }}
+            {{ partial "tags.html" . }}
           </div>
         </article>
       </main>
