add link to pinboard account

--- a/layouts/partials/footer_links.html
+++ b/layouts/partials/footer_links.html
@@ -10,5 +10,10 @@
       twitter
     </a>
   </li>
-  </ul>
+  <li>
+    <a href="https://pinboard.in/u:taravancil" class="footer__link">
+      my bookmarks
+    </a>
+  </li>
+</ul>
 </div>
