--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,5 +1,4 @@
 <header class="header">
   <a class="name" href="/">Tara Vancil</a>
-  <p class="tagline">Programmer. Currently
-  at the Recurse Center in New York City.</p>
+  <p class="tagline">Systems Engineer at Cloudflare in Austin, TX.</p>
 </header>
