add link to pinboard bookmarks

--- a/layouts/partials/footer_links.html
+++ b/layouts/partials/footer_links.html
@@ -1,6 +1,11 @@
 <div class="col col-1">
 <ul class="links">
   <li>
+    <a href="https://taravancil.com/about/" class="footer__link">
+      about
+    </a>
+  </li>
+  <li>
     <a href="https://github.com/taravancil/" class="footer__link">
       github
     </a>
