update about page

--- a/layouts/section/about.html
+++ b/layouts/section/about.html
@@ -4,20 +4,20 @@
 
   <body>
     <div class="container">
-    {{ partial "header.html" }}
-      <main>
-      	<p>
-          I'm a Systems Engineer at Cloudflare where I'm helping to build an <a
-          href="https://blog.cloudflare.com/cloudflare-acquires-eager/">application
-          platform for the web</a>. Before that, I was at <a
-          href="https://recurse.com">the Recurse Center</a>, a wonderful
-          community for programmers.
-        </p>
+      {{ partial "header.html" }}
+      <main class="main post">
+      <p>
+        I'm a Systems Engineer at <a href="https://cloudflare.com">Cloudflare</a> where
+        I'm helping to build an <a href="https://blog.cloudflare.com/cloudflare-acquires-eager">
+        app platform for the Web</a>. Before that, I was at the
+        <a href="https://recurse.com">the Recurse Center</a>, a wonderful community
+        for programmers.
+      </p>
 
-        <p>
-          Outside of programming, I enjoy weightlifting (the sport) and
-          studying nutrition and modern ailments like obesity, diabetes, and cancer.
-        </p>
+      <p>
+        Outside of programming, I enjoy weightlifting (the sport) and studying human
+        nutrition and modern ailments like metabolic syndrome.
+      </p>
       </main>
       {{ partial "footer.html" . }}
     </div>
