--- a/layouts/partials/footer_links.html
+++ b/layouts/partials/footer_links.html
@@ -2,23 +2,27 @@
 <ul class="links">
   <li>
     <a href="https://taravancil.com/about/" class="footer__link">
-      about
+      About
     </a>
   </li>
   <li>
     <a href="https://github.com/taravancil/" class="footer__link">
-      github
+      GitHub
     </a>
   </li>
   <li>
     <a href="https://twitter.com/taravancil/" class="footer__link">
-      twitter
+      Twitter
     </a>
   </li>
   <li>
     <a href="https://pinboard.in/u:taravancil" class="footer__link">
-      my bookmarks
+      My bookmarks
     </a>
   </li>
+  <li>
+    <a href="https://taravancil.com/blog/index.xml">
+      RSS
+    </a>
 </ul>
 </div>
