update about page

--- a/layouts/section/about.html
+++ b/layouts/section/about.html
@@ -15,8 +15,9 @@
       </p>
 
       <p>
-        Outside of programming, I enjoy weightlifting (the sport) and studying human
-        nutrition and modern ailments like metabolic syndrome.
+        Outside of programming, I enjoy weightlifting and studying human
+        nutrition and modern ailments (I'm particularly interested in 
+        <a href="https://en.wikipedia.org/wiki/Metabolic_syndrome">metabolic syndrome</a>).
       </p>
       </main>
       {{ partial "footer.html" . }}
