Update layout and styles for home page

--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -1,6 +1,8 @@
 body {
-  font-family: Georgia, serif;
-  font-size: .95em;
-  line-height: 1.5;
+  font-family: Rubik;
+  font-family: Rubik, 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  line-height: 1.45;
   text-rendering: optimizeLegibility;
+  color: $color-text;
 }
