--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,10 +2,32 @@
 <html>
   {{ partial "head.html" . }}
 
-  <body>
-    <div class="container">
-    {{ partial "header.html" }}
-      <main>
+  <body class="home">
+    <main>
+      <div class="hero">
+        <div class="container">
+          <h1>
+            <span class="first-name">Tara</span>
+            <span class="last-name">Vancil</span>
+          </h1>
+          <div class="intro">
+            <p>
+              Hi. I'm Tara Vancil.
+            </p>
+
+            <p>
+              I help build <a href="https://beakerbrowser.com">
+              Beaker</a>, an experimental peer-to-peer browser, and <a href="https://hashbase.io">Hashbase</a>, a cloud peer service for files hosted with the Dat protocol.
+            </p>
+
+            <!-- TODO -->
+
+          </div>
+        </div>
+
+        <img class="shapes" src="/images/shapes.svg" />
+      </div>
+
 	      <h2>Posts</h2>
 	      <ul class="posts-list">
 	        {{ range (where .Data.Pages "Section" "blog") }}
@@ -14,6 +36,6 @@
 	      </ul>
       </main>
       {{ partial "footer.html" . }}
-    </div>
+    }
   </body>
 </html>
