--- a/src/scss/base/_reset.scss
+++ b/src/scss/base/_reset.scss
@@ -11,11 +11,11 @@ html, body, header, nav, div, h1, h2, p, h3, h4, h5 {
 ul {
   padding: 0;
   margin: 0;
+  list-style: none;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+p:not(:last-child) {
+  margin-bottom: 1.5rem;
 }
 
 a, a:hover {
