--- a/src/scss/layout/_containers.scss
+++ b/src/scss/layout/_containers.scss
@@ -1,9 +1,10 @@
 .container {
   width: 95%;
   margin: auto;
-  max-width: 600px;
+  max-width: 1100px;
 
   @include respond-to(contain-90) {
+    position: relative;
     width: 90%;
   }
 }
