Use more specific class name

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -23,7 +23,7 @@
             <!-- TODO -->
           </div>
 
-          <div class="links">
+          <div class="nav-links">
             <a href="/about">About me</a>
             <a href="/work">My work</a>
             <a href="/blog">Blog</a>
