Update footer styles

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,3 +1,23 @@
-<footer class="footer grid">
-  {{ partial "footer_links.html" . }}
+<footer class="footer">
+  <div class="container">
+    <a class="name" href="/">Tara Vancil</a>
+    <div class="links internal">
+      <ul class="links-list">
+        <li><a href="/">Home</a></li>
+        <li><a href="/about">About</a></li>
+        <li><a href="/projects">Projects</a></li>
+        <li><a href="/blog">Blog</a></li>
+        <li><a href="/blog/index.xml">RSS</a></li>
+      </ul>
+    </div>
+
+    <div class="links external">
+      <ul class="links-list">
+        <li><a href="https://github.com/taravancil">GitHub</a></li>
+        <li><a href="https://twitter.com/taravancil">Twitter</a></li>
+        <li><a href="https://instagram.com/taravancil">Instagram</a></li>
+        <li><a href="">My bookmarks</a></li>
+      </ul>
+    </div>
+  </div>
 </footer>
