--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -105,6 +105,10 @@ body.home {
       display: inline;
     }
 
+    .posts {
+      margin-bottom: 2rem;
+    }
+
     .container {
       @extend %flex-container;
       flex-direction: column;
@@ -115,7 +119,7 @@ body.home {
 
         .posts {
           flex: 2;
-          margin-right: 150px;
+          margin: 0 100px 2rem 0;
         }
       }
     }
