Update link to point to projects on home page

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -25,7 +25,7 @@
 
           <div class="nav-links">
             <a href="/about">About me</a>
-            <a href="/work">My work</a>
+            <a href="#projects">My work</a>
             <a href="/blog">Blog</a>
           </div>
         </div>
