Update li layout

--- a/layouts/_default/li.html
+++ b/layouts/_default/li.html
@@ -1,7 +1,7 @@
 <li>
   <div class="meta">
     <span class="date">
-      {{ .Date.Format "2006-01-02" }}
+      {{ .Date.Format "Jan 02, 2006" }}
     </span>
   </div>
   <a href="{{ .RelPermalink }}" class="title">
