--- a/layouts/section/blog.html
+++ b/layouts/section/blog.html
@@ -2,9 +2,9 @@
 <html>
   {{ partial "head.html" . }}
 
-  <body>
+  <body class="blog">
+    {{ partial "nav.html" }}
     <div class="container">
-    {{ partial "header.html" }}
       <main>
 	      <h2>Posts</h2>
 	      <ul class="posts-list">
